# R.A.M_bot

./: README.md  pyproject.toml
rambot/: .env.example  run_me.py  start.py
rambot/alembic/: env.py
rambot/alembic/versions/: 2024_05_28_0959-aafaf1170eab_test_create.py  2024_05_28_1003-db4a835b972a_create_profile_teacher_table.py  2024_05_28_1148-959457e5c780_added_fk_from_user_to_profiles_teacher_.py  2024_05_28_1210-54c487a3f5fa_create_profile_student_table.py  2024_05_28_1211-d2cb2d1d6349_added_fk_from_user_to_profiles_student_.py  2024_05_30_1920-de97f059c9fb_set_default_is_student_and_is_teacher_.py  2024_05_30_1938-e1e601defa1c_delete_tg_id_in_users.py  2024_05_30_1938-f672beb548fa_added_tg_id_in_users.py  2024_05_31_1045-527b10554ff6_add_created_at_updated_at_all_models.py  2024_05_31_1105-538bfed752dc_create_tasks_and_task_types_table.py  2024_05_31_1109-346f2e6cf390_add_fk_tasks_to_lessons.py  2024_05_31_1125-3a8b773a276d_add_mtom_student_and_teacher.py  2024_05_31_1214-ff3e8b78915b_null_ture_in_answer_tasks.py  2024_05_31_1451-762416a7cb78_create_completed_tasks_completed_.py  2024_05_31_1459-994f99b60ce9_link_teacher_and_stident_with_task_and_.py  (+28 more)
rambot/base/: db.py
rambot/buttons/: create_profile.py  lessons.py  pagination.py  profiles.py  start.py  tasks.py
rambot/config/: settings.py
rambot/handlers/: create_profile_student.py  create_profile_teacher.py  join_to_teacher.py  lessons.py  start.py  tasks.py
rambot/states/: create_lessons_task.py  create_profiles.py  join_to_teacher.py  lessons_task.py
rambot/utils/: tokens.py
(+7 files in other folders)
