[tool.poetry]
name = "r-a-m-bot"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"
packages = [{include = "r"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
alembic = "^1.13.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
